syntax = "proto3";

package placements;

service micro {
  rpc ListPlacements (Query) returns (Placements) {}
  rpc ListStatuses (Empty) returns (PlacementsStatuses) {}
}

message Empty {}

message Query {
  string status = 1;
  string type = 2;
  string email = 3;
  string client = 4;
}

message Placement {
  int32 id = 1;
  string email = 2;
  string level = 3;
  string status = 4;
  string type = 5;
  string client = 6;
  string created_at = 7;
  string updated_at = 8;
}

message Placements {
  repeated Placement  placements= 1;
}

message PlacementsStatus {
  string id = 1;
  string name = 2;
}

message PlacementsStatuses {
  repeated PlacementsStatus status = 1;
}
